<resources>
    <string name="app_name">OnlineShop</string>
    <string name="title_home">خانه</string>
    <string name="title_categories">دسته بندی ها</string>
    <string name="title_shopping_card">سبد خرید</string>
    <string name="title_profile">پروفایل</string>

    <string name="product_price">تومان %1$s</string>

    <string name="search_view_hint">جستجو…</string>

    <string name="label_on_sale_products">پیشنهاد شگفت انگیز</string>
    <string name="label_recent_products">جدیدترین محصولات</string>
    <string name="label_top_rated_products">محصولات پرفروش</string>
    <string name="label_popular_products">محبوبترین محصولات</string>

    <string name="label_product_description">ویژگی محصول</string>

    <string name="add_to_card">افزودن به سبد خرید</string>
</resources>
