<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ir.maktabsharif.onlinshop.views.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="ir.maktabsharif.onlinshop.views.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_shopping_card"
        android:name="ir.maktabsharif.onlinshop.views.ShoppingCardFragment"
        android:label="@string/title_shopping_card"
        tools:layout="@layout/fragment_shopping_card" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ir.maktabsharif.onlinshop.views.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>