<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:targetApi="jelly_bean_mr1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include layout="@layout/layout_search_view" />

        <include layout="@layout/layout_home_slider" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_slider"
            android:layout_margin="8dp"
            android:foregroundGravity="fill"
            android:padding="2dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="6"
            tools:itemCount="6"
            tools:listitem="@layout/item_category_list" />

        <TextView
            android:id="@+id/tv_on_sale_products"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/categories_recycler_view"
            android:padding="8dp"
            android:text="@string/label_on_sale_products"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/on_sale_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_on_sale_products"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_product_list" />

        <TextView
            android:id="@+id/tv_recent_products"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/on_sale_recycler_view"
            android:padding="8dp"
            android:text="@string/label_recent_products"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recent_products"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_product_list" />

        <TextView
            android:id="@+id/tv_top_rated_products"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recent_recycler_view"
            android:padding="8dp"
            android:text="@string/label_top_rated_products"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_rated_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_top_rated_products"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_product_list" />


        <TextView
            android:id="@+id/tv_popular_products"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_rated_recycler_view"
            android:padding="8dp"
            android:text="@string/label_popular_products"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_popular_products"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_product_list" />


    </RelativeLayout>
</ScrollView>